# small-tasks

./: .gitignore  README.md
Adroid/Cards/gradle/wrapper/: gradle-wrapper.properties
Adroid/Kotlin/src/: Main.kt  Repository.kt
Adroid/TaskaManager/app/: build.gradle.kts
Adroid/TaskaManager/app/src/main/: AndroidManifest.xml
Article/app/: build.gradle.kts
Article/gradle/wrapper/: gradle-wrapper.properties
Cards/app/: build.gradle.kts
DSA/binarySearch/src/: Main.java
DSA/mergesort/src/: Main.java
DSA/quickSOrt/src/: Main.java
DSA/simpleSort/src/: Main.java
TaskaManager/: settings.gradle.kts
TaskaManager/app/src/main/res/values/: themes.xml
TaskaManager/gradle/wrapper/: gradle-wrapper.properties
android/gradle/wrapper/: gradle-wrapper.properties
cpp/15puzzle/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
cpp/calc/: CMakeLists.txt  main.cpp
cpp/cmake/Step1/: CMakeLists.txt  tutorial.cxx
cpp/cmake/Step2/: CMakeLists.txt
cpp/decide/: CMakeCache.txt  CMakeLists.txt  Makefile  Random.h  cmake_install.cmake  decide  main.cpp
cpp/dynamicarr/: CMakeLists.txt  main.cpp
cpp/hi-lo/: CMakeLists.txt  main.cpp
cpp/libtest/: CMakeLists.txt  main.cpp
cpp/opengl/texture/: CMakeLists.txt  main.cpp  shader.frag
cpp/opengl/traingle2/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp  shader.vert
cpp/opengl/traingle3/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
cpp/opengl/transform/: Shader.cpp  Shader.h  main.cpp  shader.frag  shader.vert
cpp/opengl/window/: CMakeLists.txt  main.cpp
cpp/opptest/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
(+11 files in other folders)
